// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Closing first accordion with no others open 1`] = `
<DocumentFragment>
  <h3>
    <button
      aria-controls="first-content"
      aria-expanded="false"
      id="first-button"
    >
      Header 1
    </button>
  </h3>
  <div
    aria-hidden="true"
    aria-labelledby="first-button"
    id="first-content"
  />
  <h3>
    <button
      aria-controls="second-content"
      aria-expanded="false"
      id="second-button"
    >
      Header 2
    </button>
  </h3>
  <div
    aria-hidden="true"
    aria-labelledby="second-button"
    id="second-content"
  />
</DocumentFragment>
`;

exports[`Initial render default 1`] = `
<DocumentFragment>
  <h3>
    <button
      aria-controls="first-content"
      aria-expanded="true"
      id="first-button"
    >
      Header 1
    </button>
  </h3>
  <div
    aria-hidden="false"
    aria-labelledby="first-button"
    id="first-content"
  >
    Content 1
  </div>
  <h3>
    <button
      aria-controls="second-content"
      aria-expanded="false"
      id="second-button"
    >
      Header 2
    </button>
  </h3>
  <div
    aria-hidden="true"
    aria-labelledby="second-button"
    id="second-content"
  />
</DocumentFragment>
`;

exports[`Initial render exactlyOneOpen true and openFirst false 1`] = `
<DocumentFragment>
  <h3>
    <button
      aria-controls="first-content"
      aria-expanded="true"
      id="first-button"
    >
      Header 1
    </button>
  </h3>
  <div
    aria-hidden="false"
    aria-labelledby="first-button"
    id="first-content"
  >
    Content 1
  </div>
  <h3>
    <button
      aria-controls="second-content"
      aria-expanded="false"
      id="second-button"
    >
      Header 2
    </button>
  </h3>
  <div
    aria-hidden="true"
    aria-labelledby="second-button"
    id="second-content"
  />
</DocumentFragment>
`;

exports[`Initial render openFirst false 1`] = `
<DocumentFragment>
  <h3>
    <button
      aria-controls="first-content"
      aria-expanded="false"
      id="first-button"
    >
      Header 1
    </button>
  </h3>
  <div
    aria-hidden="true"
    aria-labelledby="first-button"
    id="first-content"
  />
  <h3>
    <button
      aria-controls="second-content"
      aria-expanded="false"
      id="second-button"
    >
      Header 2
    </button>
  </h3>
  <div
    aria-hidden="true"
    aria-labelledby="second-button"
    id="second-content"
  />
</DocumentFragment>
`;

exports[`Opening second accordion when first already open 1`] = `
<DocumentFragment>
  <h3>
    <button
      aria-controls="first-content"
      aria-expanded="true"
      id="first-button"
    >
      Header 1
    </button>
  </h3>
  <div
    aria-hidden="false"
    aria-labelledby="first-button"
    id="first-content"
  >
    Content 1
  </div>
  <h3>
    <button
      aria-controls="second-content"
      aria-expanded="true"
      id="second-button"
    >
      Header 2
    </button>
  </h3>
  <div
    aria-hidden="false"
    aria-labelledby="second-button"
    id="second-content"
  >
    Content 2
  </div>
</DocumentFragment>
`;

exports[`exactlyOneOpen Closing first accordion when first open 1`] = `
<DocumentFragment>
  <h3>
    <button
      aria-controls="first-content"
      aria-expanded="true"
      id="first-button"
    >
      Header 1
    </button>
  </h3>
  <div
    aria-hidden="false"
    aria-labelledby="first-button"
    id="first-content"
  >
    Content 1
  </div>
  <h3>
    <button
      aria-controls="second-content"
      aria-expanded="false"
      id="second-button"
    >
      Header 2
    </button>
  </h3>
  <div
    aria-hidden="true"
    aria-labelledby="second-button"
    id="second-content"
  />
</DocumentFragment>
`;

exports[`exactlyOneOpen Opening second accordion when first open 1`] = `
<DocumentFragment>
  <h3>
    <button
      aria-controls="first-content"
      aria-expanded="false"
      id="first-button"
    >
      Header 1
    </button>
  </h3>
  <div
    aria-hidden="true"
    aria-labelledby="first-button"
    id="first-content"
  />
  <h3>
    <button
      aria-controls="second-content"
      aria-expanded="true"
      id="second-button"
    >
      Header 2
    </button>
  </h3>
  <div
    aria-hidden="false"
    aria-labelledby="second-button"
    id="second-content"
  >
    Content 2
  </div>
</DocumentFragment>
`;
